tests/baselines/reference/typeInferenceConflictingCandidates.errors.txt
tests/cases/compiler/typeInferenceConflictingCandidates.ts(3,1): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate '""' is not a valid type argument because it is not a supertype of candidate '3'.


==== tests/cases/compiler/typeInferenceConflictingCandidates.ts (1 errors) ====
    declare function g<T>(a: T, b: T, c: (t: T) => T): T;
    
    g("", 3, a => a);
    ~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate '""' is not a valid type argument because it is not a supertype of candidate '3'.